--- a/SeleniumAutomationProject.csproj
+++ b/SeleniumAutomationProject.csproj
@@ -3,6 +3,11 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+      <Content Include="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content> 
+
+
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0"/>
     <PackageReference Include="Selenium.Chrome.WebDriver" Version="2.43.0"/>
     <PackageReference Include="Selenium.Support" Version="3.141.0"/>
