created first POM and successfully ran

--- a/SeleniumAutomationProject.csproj
+++ b/SeleniumAutomationProject.csproj
@@ -6,6 +6,9 @@
       <Content Include="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content> 
+      <Content Include="Driver/*">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content> 
 
 
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0"/>
